# Sparks-Game-Engine

./: .gitignore  LICENSE  README.md  meson.build
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: main.yml
include/: Camera.h  Game.h  GameHost.h  GameObject.h  RemoteGame.h  Scene.h  Vec3.h  meson.build
include/Logger/: Logger.h
include/Scriptables/: AudioSource.h  DirectionalLight.h  PointLight.h  RenderMesh.h  Scriptable.h  SpotLight.h  Transform.h
include/glad/: glad.h
res/default_shaders/: default.frag  default.vert
src/: Base.h  Context.Linux.cpp  Context.cpp  Context.h  GWindow.cpp  GWindow.h  Game.cpp  GameObject.cpp  IContext.h  Scene.cpp  Window.cpp  Window.h  main.cpp  meson.build
src/Audio/: Audio.h  IAudioEngine.h
src/Audio/AL/: ALAudio.cpp  ALAudio.h  Listener.h  Speaker.h
src/Logger/: Logger.cpp  Logger.h
src/Networking/: GameHost.cpp  Networking.h  RemoteGame.cpp
src/Renderer/: IRenderEngine.h  Mesh.cpp  Mesh.h  OpenGLRenderEngine.cpp  OpenGLRenderEngine.h  RenderObject.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vec2.h  Vec3.h  Vec4.h
src/Renderer/OpenGL/: OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderEngine.cpp  OpenGLRenderEngine.h  OpenGLSSBO.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
src/Scriptables/: AudioSource.cpp  DirectionalLight.cpp  PointLight.cpp  RenderMesh.cpp  SpotLight.cpp
test/: Test.cpp  Test.h  meson.build
